unpackaged/main/default/objects/Insurance_Line_Item__c/Insurance_Line_Item__c.object-meta.xml
<CustomObject>
    <description>General insurance related object</description>
    <label>Insurance Line Item</label>
    <nameField>
        <displayFormat>Item - {00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>