unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Correction/Amendment</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>