unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>