unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Deductible_E_E_L__c.field-meta.xml
<CustomField>
    <fullName>Deductible_E_E_L__c</fullName>
    <label>Deductible E.E.L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>