unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>General Insurance</relationshipLabel>
    <relationshipName>Insurance_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>