unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Finance_No__c.field-meta.xml
<CustomField>
    <fullName>Finance_No__c</fullName>
    <formula>Employee__r.ETIN_Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance No.</label>
    <type>Text</type>
</CustomField>