unpackaged/main/default/objects/Insurance_Line_Item__c/fields/General_Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>General_Insurance_Policy__c</fullName>
    <label>General Insurance Policy</label>
    <referenceTo>GI_General_Insurance_Policy__c</referenceTo>
    <relationshipLabel>Insurance Line Items</relationshipLabel>
    <relationshipName>Insurance_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>