unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Insurance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Limit__c</fullName>
    <label>Insurance Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>