unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Insurance_Request__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Request</label>
    <referenceTo>GI_General_Insurance_Request__c</referenceTo>
    <relationshipLabel>Insurance Line Items</relationshipLabel>
    <relationshipName>Insurance_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>