unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <formula>TEXT(General_Insurance_Policy__r.Insurance_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Type</label>
    <type>Text</type>
</CustomField>