unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Interest_Insured__c.field-meta.xml
<CustomField>
    <fullName>Interest_Insured__c</fullName>
    <label>Interest Insured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUILDING</fullName>
            </value>
            <value>
                <fullName>COMPUTER ANDPERIPHERALS</fullName>
            </value>
            <value>
                <fullName>FURNITURE AND FITTINGS</fullName>
            </value>
            <value>
                <fullName>MACHINERY AND EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>OFFICE EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>SEMI PER CONST</fullName>
            </value>
            <value>
                <fullName>STOCK IN TRADE</fullName>
            </value>
            <value>
                <fullName>STOCK OF DIESEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>