unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Employee__r.ETIN_Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>