unpackaged/main/default/objects/Insurance_Line_Item__c/fields/Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary__c</fullName>
    <formula>Employee__r.ETIN_Gross_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>