unpackaged/main/default/objects/Insurance_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Insurance_Request__c</columns>
    <columns>General_Insurance_Policy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>